# apv-median

./: .gitattributes  .gitignore  Common.mk.in  LICENCE.md  Makefile  README.md  configure  configure.ac
doc/: README.md  capacity.md  implementation.md
examples/: Makefile  README.md
examples/dumper/: Makefile  main.c  options.c  options.ggo
examples/series/: Makefile  make-csv  make-pdf
examples/series-capacity/: .gitignore  Makefile  make-csv  make-pdf
examples/series-capacity/dumper/: main.c  options.c  options.ggo  options.h
examples/series-compare/: .gitignore  Makefile
examples/series-compare/dumper/: options.ggo
examples/series/dumper/: main.c  options.c  options.h
examples/video/: Makefile  README.md  make-mp4  make-png
examples/video/dumper/: Makefile  main.c  options.c  options.ggo  options.h
src/: Makefile  README.md  avltree.c  avltree.h  bin.h  config.h.in  histogram.c  histogram.h  median.c  median.h  node.c  node.h  percentile.c  percentile.h
test/: Makefile  assert_errno.c  assert_errno.h  cunit_compat.h  helpers.c  helpers.h  main.c  tests.c  tests.h  tests_avltree.c  tests_avltree.h  tests_histogram.c  tests_histogram.h  tests_median.c  tests_median.h  tests_node.c  tests_node.h  tests_percentile.c  tests_percentile.h
test/fixtures/: histogram.json  zero-counts-all.json  zero-counts-some.json
test/include/: README.md
util/: Makefile  README.md
util/histogram-median/: Makefile  main.c  options.c  options.ggo  options.h
util/median/: Makefile  main.c  options.c  options.ggo  options.h
util/percentile/: Makefile  main.c  options.c  options.ggo  options.h
